# multi-index-container

./: Cargo.toml  LICENSE  README.MD
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: people_db.rs
src/: combined_getters.rs  lib.rs
tests/: test.rs
